--- a/index.html
+++ b/index.html
@@ -9,23 +9,93 @@
         <title>Framework 12 column</title>
     </head>
     <body> 
-            <div class="container">
-                <div class="col-1"></div>
-                <div class="col-1"></div>
-                <div class="col-1"></div>
-                <div class="col-1"></div>
-                <div class="col-1"></div>
-                <div class="col-1"></div>
-                <div class="col-1"></div>
-                <div class="col-1"></div>
-                <div class="col-1"></div>
-                <div class="col-1"></div>
-                <div class="col-1"></div>
-                <div class="col-1"></div>
-            </div>
+        <div class="container">
+            <div class="col-1">1 col</div>
+            <div class="col-1">1 col</div>
+            <div class="col-1">1 col</div>
+            <div class="col-1">1 col</div>
+            <div class="col-1">1 col</div>
+            <div class="col-1">1 col</div>
+            <div class="col-1">1 col</div>
+            <div class="col-1">1 col</div>
+            <div class="col-1">1 col</div>
+            <div class="col-1">1 col</div>
+            <div class="col-1">1 col</div>
+            <div class="col-1">1 col</div>
+        </div>
          <div class="container">
-             <div class="col-12"></div>
+             <div class="col-12">12 col</div>
          </div>
-       
+         <div class="container">
+             <div class="col-8">8 col</div>
+             <div class="col-2">2 col</div>
+             <div class="col-2">2 col</div>
+         </div>
+         <div class="container">
+             <div class="col-1">1 col</div>
+             <div class="col-2">2 col</div>
+             <div class="col-2">2 col</div>
+             <div class="col-6">6 col</div>
+             <div class="col-1">1 col</div>
+         </div>
+         <div class="container">
+             <div class="col-6">
+                 <div class="container">
+                     <div class="col-2">2 col</div>
+                     <div class="col-2">2 col</div>
+                     <div class="col-8">8 col</div>
+                 </div>
+             </div>
+             <div class="col-6">
+                 <div class="container">
+                     <div class="col-6">6 col</div>
+                     <div class="col-6">6 col</div>
+                 </div>
+             </div>
+         </div>   
+         <div class="container container2">
+            <div class="col-1">1 col</div>
+            <div class="col-1">1 col</div>
+            <div class="col-1">1 col</div>
+            <div class="col-1">1 col</div>
+            <div class="col-1">1 col</div>
+            <div class="col-1">1 col</div>
+            <div class="col-1">1 col</div>
+            <div class="col-1">1 col</div>
+            <div class="col-1">1 col</div>
+            <div class="col-1">1 col</div>
+            <div class="col-1">1 col</div>
+            <div class="col-1">1 col</div>
+        </div>
+         <div class="container">
+             <div class="col-12">12 col</div>
+         </div>
+         <div class="container">
+             <div class="col-8">8 col</div>
+             <div class="col-2">2 col</div>
+             <div class="col-2">2 col</div>
+         </div>
+         <div class="container">
+             <div class="col-1">1 col</div>
+             <div class="col-2">2 col</div>
+             <div class="col-2">2 col</div>
+             <div class="col-6">6 col</div>
+             <div class="col-1">1 col</div>
+         </div>
+         <div class="container">
+             <div class="col-6">
+                 <div class="container">
+                     <div class="col-2">2 col</div>
+                     <div class="col-2">2 col</div>
+                     <div class="col-8">8 col</div>
+                 </div>
+             </div>
+             <div class="col-6">
+                 <div class="container">
+                     <div class="col-6">6 col</div>
+                     <div class="col-6">6 col</div>
+                 </div>
+             </div>
+         </div>   
     </body>
 </html>
