parte finale completata

--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
              <div class="col-1">1 col</div>
          </div>
          <div class="container">
-             <div class="col-6">
+             <div class="col-6 last">
                  <div class="container">
                      <div class="col-2">Nested 2 col</div>
                      <div class="col-2">Nested 2 col</div>
                      <div class="col-8">Nested 8 col</div>
                  </div>
              </div>
-             <div class="col-6">
+             <div class="col-6 last">
                  <div class="container">
                      <div class="col-6">Nested 6 col</div>
                      <div class="col-6">Nested 6 col</div>
@@ -80,7 +80,7 @@
              <div class="col-6 col-offset-2">6 col</div>
          </div>
          <div class="container">
-                <div class="col-6">
+                <div class="col-6 last">
                     <div class="container">
                         <div class="col-2">Nested 2 col</div>
                         <div class="col-2">Nested 2 col</div>
@@ -88,11 +88,11 @@
                     </div>
                 </div>
              <div class="col-6">
-                 <div class="container">
+                 <div class="container last">
                      <div class="col-6">Nested 6 col</div>
                      <div class="col-6">Nested 6 col</div>
-            </div>
-        </div>    
-    </div>   
+                </div>
+            </div>    
+        </div>  
     </body>
 </html>
